test_cases/negative/export_function_in_function.snek
def Foo(value) {
    export def Foo() {
        return 10;
    }

    return Image("rust:latest");
}

export DEFAULT = Foo();
